# cangjie_stdx

./: .gitignore  CMakeLists.txt  README.OpenSource  README.md  README_OpenHarmony.md  README_zh.md  build.cj  build.py  cjpm.toml  cjpm_build.py
.cache/astdata/: default.stdx.13734154352231053487.ast  default.stdx.actors.387448206182774520.ast  default.stdx.actors.macros.14771342616316297813.ast  default.stdx.aspectCJ.9423220490198128077.ast  default.stdx.compress.13211751491196599930.ast  default.stdx.compress.zlib.678764989474522514.ast  default.stdx.crypto.5863792610604815153.ast  default.stdx.crypto.common.18355254261937360981.ast  default.stdx.crypto.crypto.7174732045103453561.ast  default.stdx.crypto.digest.8172709628212567959.ast  default.stdx.crypto.keys.9520809252297073205.ast  default.stdx.crypto.kit.16227354971931048587.ast  default.stdx.crypto.x509.16733422560387498264.ast  default.stdx.effect.8472964284561450772.ast  default.stdx.encoding.12088890750452142908.ast  default.stdx.encoding.base64.4238168830521826033.ast  default.stdx.encoding.hex.5674338541597341668.ast  default.stdx.encoding.json.4331123792020880853.ast  default.stdx.encoding.json.stream.13031765628281787068.ast  default.stdx.encoding.url.3737090845402893308.ast  default.stdx.fuzz.6809814374432958145.ast  default.stdx.fuzz.fuzz.16347564132208394739.ast  default.stdx.log.7759123413394249543.ast  default.stdx.logger.163470519940663663.ast  default.stdx.net.8999854695379688399.ast  default.stdx.net.http.1654908655593913527.ast  default.stdx.net.tls.16425591023471033931.ast  default.stdx.net.tls.common.1377562925119211949.ast  default.stdx.serialization.3349703670898260760.ast  default.stdx.serialization.serialization.13101015344839051144.ast  default.stdx.string_intern.4016500411382240817.ast  default.stdx.unittest.9218796432813633423.ast  default.stdx.unittest.data.18388277673424049774.ast
.cache/index/: default.stdx.actors.387448206182774520.idx  default.stdx.actors.macros.14771342616316297813.idx  default.stdx.aspectCJ.9423220490198128077.idx  default.stdx.compress.zlib.678764989474522514.idx  default.stdx.crypto.common.18355254261937360981.idx  default.stdx.crypto.crypto.7174732045103453561.idx  default.stdx.crypto.digest.8172709628212567959.idx  default.stdx.crypto.keys.9520809252297073205.idx  default.stdx.crypto.kit.16227354971931048587.idx  default.stdx.crypto.x509.16733422560387498264.idx  default.stdx.effect.8472964284561450772.idx  default.stdx.encoding.base64.4238168830521826033.idx  default.stdx.encoding.hex.5674338541597341668.idx  default.stdx.encoding.json.4331123792020880853.idx  default.stdx.encoding.json.stream.13031765628281787068.idx  default.stdx.encoding.url.3737090845402893308.idx  default.stdx.fuzz.fuzz.16347564132208394739.idx  default.stdx.log.7759123413394249543.idx  default.stdx.logger.163470519940663663.idx  default.stdx.net.http.1654908655593913527.idx  default.stdx.net.tls.16425591023471033931.idx  default.stdx.net.tls.common.1377562925119211949.idx  default.stdx.serialization.serialization.13101015344839051144.idx  default.stdx.string_intern.4016500411382240817.idx  default.stdx.unittest.data.18388277673424049774.idx
.gitcode/: CODEOWNERS
.gitcode/ISSUE_TEMPLATE/: bug-report.yml
.gitcode/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE_chinese.md
doc/: summary_cjnative.md  summary_cjnative_EN.md
doc/contribute/template/: libs_template.md
doc/libs_stdx/: libs_overview.md  source_code_dependency.md  summary_cjnative.md
doc/libs_stdx/actors/: actors_package_overview.md
doc/libs_stdx/actors/actors_package_api/: actors_package_classes.md
doc/libs_stdx/aspectCJ/aspectCJ_package_api/: aspectCJ_package_classes.md
doc/libs_stdx/aspectCJ/aspectCJ_samples/: aspectCJ_sample.md
doc/libs_stdx/chir/: chir_package_overview.md
doc/libs_stdx/chir/chir_package_api/: chir_package_classes.md
doc/libs_stdx/effect/: effect_package_overview.md
doc/libs_stdx/fuzz/: fuzz_package_overview.md
doc/libs_stdx/plugin/: plugin_package_overview.md
doc/libs_stdx/string_intern/: string_intern_package_overview.md
doc/libs_stdx/syntax/: syntax_package_overview.md
doc/libs_stdx_en/: libs_overview.md  source_code_dependency.md  summary_cjnative.md
doc/libs_stdx_en/actors/: actors_package_overview.md
doc/libs_stdx_en/plugin/: plugin_package_overview.md
doc/libs_stdx_en/release-notes/: cangjie-1.0.4.1.alpha.40-release-notes.md
doc/libs_stdx_en/string_intern/: string_intern_package_overview.md
doc/libs_stdx_test/string_intern/: string_intern_package_overview.md
doc/release-notes/: cangjie_stdx-1.0.4.1.alpha.40-release-notes.md
plugin/: cmd.sh  plugin1.cj  plugin2.cj  test.cj
src/: CMakeLists.txt
src/stdx/: CMakeLists.txt
src/stdx/CHIR/: CHIR.cj
src/stdx/actors/: actor_future.cj
src/stdx/aspectCJ/plugins/: CMakeLists.txt
src/stdx/chir/: .gitignore  CMakeLists.txt  expr.cj  ffi.cj  package.cj  type.cj  value.cj
src/stdx/dynamicLoader/: CMakeLists.txt  declareFunction.inc  defineFunction.inc  opensslSymbols.c  opensslSymbols.h  staticSymbols.c
src/stdx/effect/: CMakeLists.txt  common.cj  deferred.cj  effect.cj
src/stdx/logger/: CMakeLists.txt  common_logger.cj  common_logger_ohos.cj
src/stdx/plugin/: ast_plugin.cj  chir_plugin.cj  diagnostics.cj  general_plugin.cj  options.cj  plugin.cj
src/stdx/regex/: match_data.cj  matcher.cj  native.cj  regex.cj  regex_exception.cj  regex_option.cj
src/stdx/semantic/: ffi.cj  getType.cj  semanticResult.cj  semanticTypes.cj
src/stdx/string_intern/: i_link_list.cj
src/stdx/syntax/: ast_rewriter.cj  basic.cj  code_position.cj  decl.cj  expr.cj  ffi.cj  macro.cj  offset.cj  package.cj  parser.cj  parser_impl.cj  pattern.cj  public_parse_apis.cj  rewriter.cj  serialize_syntax_node_impl.cj  syntax_node_impl.cj  syntax_node_impl_creator.cj  syntax_node_impl_translator.cj  syntax_node_kind.cj  syntax_tree_node.cj  type_annotation.cj
src/stdx/syntax/native/: AstApi.cpp  AstApi.h  CMakeLists.txt  ExprWriter.cpp  NodeFormat.fbs  NodeWriter.cpp  NodeWriter.h  ParserSyntax.cpp  ParserSyntaxImpl.h
(+212 files in other folders)
